--- a/assets/vue2/index.html
+++ b/assets/vue2/index.html
@@ -1,4 +1,29 @@
-<!DOCTYPE html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><style>* {
-            margin: 0;
-            padding: 0;
-        }</style><link href="static/css/chunk-29bf38d2.ae79f8a5.css" rel="prefetch"><link href="static/css/chunk-5c9d68d5.e2915948.css" rel="prefetch"><link href="static/css/chunk-60beb6b6.32ad4756.css" rel="prefetch"><link href="static/js/chunk-29bf38d2.db838bd1.js" rel="prefetch"><link href="static/js/chunk-5c9d68d5.9ec7c94d.js" rel="prefetch"><link href="static/js/chunk-60beb6b6.90a33258.js" rel="prefetch"><link href="static/css/app.a70b7773.css" rel="preload" as="style"><link href="static/css/chunk-vendors.caa671fd.css" rel="preload" as="style"><link href="static/js/app.2b342e6c.js" rel="preload" as="script"><link href="static/js/chunk-vendors.e6a11043.js" rel="preload" as="script"><link href="static/css/chunk-vendors.caa671fd.css" rel="stylesheet"><link href="static/css/app.a70b7773.css" rel="stylesheet"></head><body><div id="app"></div><script src="static/js/chunk-vendors.e6a11043.js"></script><script src="static/js/app.2b342e6c.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <style>* {
+        margin: 0;
+        padding: 0;
+    }</style>
+    <link href="static/css/chunk-2dfe1392.ea2ee6a6.css" rel="prefetch">
+    <link href="static/css/chunk-5b3174e1.da222957.css" rel="prefetch">
+    <link href="static/css/chunk-5c9d68d5.e2915948.css" rel="prefetch">
+    <link href="static/js/chunk-2dfe1392.d962d889.js" rel="prefetch">
+    <link href="static/js/chunk-5b3174e1.cd783de0.js" rel="prefetch">
+    <link href="static/js/chunk-5c9d68d5.284830ca.js" rel="prefetch">
+    <link as="style" href="static/css/app.c2e8fe31.css" rel="preload">
+    <link as="style" href="static/css/chunk-vendors.caa671fd.css" rel="preload">
+    <link as="script" href="static/js/app.66a2dcdd.js" rel="preload">
+    <link as="script" href="static/js/chunk-vendors.e6a11043.js" rel="preload">
+    <link href="static/css/chunk-vendors.caa671fd.css" rel="stylesheet">
+    <link href="static/css/app.c2e8fe31.css" rel="stylesheet">
+</head>
+<body>
+<div id="app"></div>
+<script src="static/js/chunk-vendors.e6a11043.js"></script>
+<script src="static/js/app.66a2dcdd.js"></script>
+</body>
+</html>
