--- a/assets/vue2/index.html
+++ b/assets/vue2/index.html
@@ -2,28 +2,28 @@
 <html lang="">
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta content="IE=edge" http-equiv="X-UA-Compatible">
+    <meta content="width=device-width,initial-scale=1" name="viewport">
     <style>* {
         margin: 0;
         padding: 0;
     }</style>
-    <link href="static/css/chunk-2dfe1392.ea2ee6a6.css" rel="prefetch">
-    <link href="static/css/chunk-5b3174e1.da222957.css" rel="prefetch">
-    <link href="static/css/chunk-5c9d68d5.e2915948.css" rel="prefetch">
-    <link href="static/js/chunk-2dfe1392.d962d889.js" rel="prefetch">
-    <link href="static/js/chunk-5b3174e1.cd783de0.js" rel="prefetch">
-    <link href="static/js/chunk-5c9d68d5.284830ca.js" rel="prefetch">
-    <link as="style" href="static/css/app.c2e8fe31.css" rel="preload">
+    <link href="static/css/chunk-24a97a74.30a00c47.css" rel="prefetch">
+    <link href="static/css/chunk-2ddf20ae.a270d7cd.css" rel="prefetch">
+    <link href="static/css/chunk-54683062.c5861430.css" rel="prefetch">
+    <link href="static/js/chunk-24a97a74.4fa742d9.js" rel="prefetch">
+    <link href="static/js/chunk-2ddf20ae.339140bc.js" rel="prefetch">
+    <link href="static/js/chunk-54683062.a8804065.js" rel="prefetch">
+    <link as="style" href="static/css/app.942de4f0.css" rel="preload">
     <link as="style" href="static/css/chunk-vendors.caa671fd.css" rel="preload">
-    <link as="script" href="static/js/app.66a2dcdd.js" rel="preload">
-    <link as="script" href="static/js/chunk-vendors.e6a11043.js" rel="preload">
+    <link as="script" href="static/js/app.3f24d835.js" rel="preload">
+    <link as="script" href="static/js/chunk-vendors.d6cf8456.js" rel="preload">
     <link href="static/css/chunk-vendors.caa671fd.css" rel="stylesheet">
-    <link href="static/css/app.c2e8fe31.css" rel="stylesheet">
+    <link href="static/css/app.942de4f0.css" rel="stylesheet">
 </head>
 <body>
 <div id="app"></div>
-<script src="static/js/chunk-vendors.e6a11043.js"></script>
-<script src="static/js/app.66a2dcdd.js"></script>
+<script src="static/js/chunk-vendors.d6cf8456.js"></script>
+<script src="static/js/app.3f24d835.js"></script>
 </body>
 </html>
