--- a/assets/vue/index.html
+++ b/assets/vue/index.html
@@ -8,22 +8,22 @@
         margin: 0;
         padding: 0;
     }</style>
-    <link href="static/css/chunk-51d7875c.64a20ce0.css" rel="prefetch">
-    <link href="static/css/chunk-78132dea.cad25b09.css" rel="prefetch">
-    <link href="static/css/chunk-7d5b0b40.c57f0236.css" rel="prefetch">
-    <link href="static/js/chunk-51d7875c.ae2da0c6.js" rel="prefetch">
-    <link href="static/js/chunk-78132dea.12256341.js" rel="prefetch">
-    <link href="static/js/chunk-7d5b0b40.b39b922f.js" rel="prefetch">
-    <link href="static/css/app.2a0ad838.css" rel="preload" as="style">
+    <link href="static/css/chunk-0d0aaf44.ecf36be1.css" rel="prefetch">
+    <link href="static/css/chunk-729f3d22.42b4521f.css" rel="prefetch">
+    <link href="static/css/chunk-c7b676d4.1a06b254.css" rel="prefetch">
+    <link href="static/js/chunk-0d0aaf44.065b7b07.js" rel="prefetch">
+    <link href="static/js/chunk-729f3d22.b821ee68.js" rel="prefetch">
+    <link href="static/js/chunk-c7b676d4.fe8219f1.js" rel="prefetch">
+    <link href="static/css/app.da791fcd.css" rel="preload" as="style">
     <link href="static/css/chunk-vendors.caa671fd.css" rel="preload" as="style">
-    <link href="static/js/app.1d58d9fb.js" rel="preload" as="script">
+    <link href="static/js/app.481a059c.js" rel="preload" as="script">
     <link href="static/js/chunk-vendors.0c45f8d0.js" rel="preload" as="script">
     <link href="static/css/chunk-vendors.caa671fd.css" rel="stylesheet">
-    <link href="static/css/app.2a0ad838.css" rel="stylesheet">
+    <link href="static/css/app.da791fcd.css" rel="stylesheet">
 </head>
-<body>
+<body style="padding: 0;margin: 0;">
 <div id="app"></div>
 <script src="static/js/chunk-vendors.0c45f8d0.js"></script>
-<script src="static/js/app.1d58d9fb.js"></script>
+<script src="static/js/app.481a059c.js"></script>
 </body>
 </html>
