--- a/vue2/public/index.html
+++ b/vue2/public/index.html
@@ -13,11 +13,7 @@
         }
     </style>
 </head>
-<body>
-<!--    <noscript>-->
-<!--      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>-->
-<!--    </noscript>-->
+<body style="padding: 0;margin: 0;">
 <div id="app"></div>
-<!-- built files will be auto injected -->
 </body>
 </html>
