--- a/assets/vue/index.html
+++ b/assets/vue/index.html
@@ -1,29 +1,4 @@
-<!DOCTYPE html>
-<html lang="">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <style>* {
-        margin: 0;
-        padding: 0;
-    }</style>
-    <link href="static/css/chunk-0d0aaf44.ecf36be1.css" rel="prefetch">
-    <link href="static/css/chunk-729f3d22.42b4521f.css" rel="prefetch">
-    <link href="static/css/chunk-c7b676d4.1a06b254.css" rel="prefetch">
-    <link href="static/js/chunk-0d0aaf44.065b7b07.js" rel="prefetch">
-    <link href="static/js/chunk-729f3d22.b821ee68.js" rel="prefetch">
-    <link href="static/js/chunk-c7b676d4.fe8219f1.js" rel="prefetch">
-    <link href="static/css/app.da791fcd.css" rel="preload" as="style">
-    <link href="static/css/chunk-vendors.caa671fd.css" rel="preload" as="style">
-    <link href="static/js/app.481a059c.js" rel="preload" as="script">
-    <link href="static/js/chunk-vendors.0c45f8d0.js" rel="preload" as="script">
-    <link href="static/css/chunk-vendors.caa671fd.css" rel="stylesheet">
-    <link href="static/css/app.da791fcd.css" rel="stylesheet">
-</head>
-<body style="padding: 0;margin: 0;">
-<div id="app"></div>
-<script src="static/js/chunk-vendors.0c45f8d0.js"></script>
-<script src="static/js/app.481a059c.js"></script>
-</body>
-</html>
+<!DOCTYPE html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><style>* {
+            margin: 0;
+            padding: 0;
+        }</style><link href="static/css/chunk-6aba5610.484a7bbc.css" rel="prefetch"><link href="static/css/chunk-be00c0e4.fc76fbc7.css" rel="prefetch"><link href="static/css/chunk-c7b676d4.1a06b254.css" rel="prefetch"><link href="static/js/chunk-6aba5610.1fe74360.js" rel="prefetch"><link href="static/js/chunk-be00c0e4.0161dca6.js" rel="prefetch"><link href="static/js/chunk-c7b676d4.fe8219f1.js" rel="prefetch"><link href="static/css/app.4b5a067b.css" rel="preload" as="style"><link href="static/css/chunk-vendors.caa671fd.css" rel="preload" as="style"><link href="static/js/app.e28721c8.js" rel="preload" as="script"><link href="static/js/chunk-vendors.4f870c73.js" rel="preload" as="script"><link href="static/css/chunk-vendors.caa671fd.css" rel="stylesheet"><link href="static/css/app.4b5a067b.css" rel="stylesheet"></head><body style="padding: 0;margin: 0;"><div id="app"></div><script src="static/js/chunk-vendors.4f870c73.js"></script><script src="static/js/app.e28721c8.js"></script></body></html>
